# vortex

./: .gitignore  Cargo.toml  README.md  Settings.toml  build_run.sh  run.sh
src/: main.rs
src/core/: common.rs  logging.rs  mod.rs  settings.rs
src/core/dns/: enrich.rs  mod.rs  worker.rs
src/core/flows/: aggregate.rs  aggregator.rs  cleanup.rs  components.rs  dpi.rs  ingest.rs  ipclass.rs  mod.rs  packet.rs  service.rs  test_support.rs
src/core/flows/capture/: interfaces.rs  mod.rs  probe.rs  thread.rs
src/core/processes/: components.rs  enrich.rs  mod.rs  snapshot.rs
src/core/terminal/: context.rs  global_keys.rs  input.rs  mod.rs  panic_hook.rs
src/screens/: common.rs  details_overlay.rs  flow_details.rs  mod.rs  prefs.rs  theme.rs
src/screens/dashboard/: conn.rs  keys.rs  mod.rs  render.rs  rows.rs  state.rs
src/screens/picker/: keys.rs  mod.rs  populate.rs  render.rs  state.rs
src/screens/processes/: keys.rs  mod.rs  render.rs  state.rs  tree.rs
src/screens/widgets/: details.rs  filter.rs  footer.rs  format.rs  header.rs  help.rs  mod.rs  scrollbar.rs  sparkline.rs
